# roscopter

roscopter/: CMakeLists.txt
roscopter/cfg/: Controller.cfg
roscopter/include/controller/: controller.h  controller_ros.h  ff_cntrl.h  ff_cntrl_ros.h  pd_cond_i.h  pd_i_lpf.h  simple_pid.h  vel_cntrl.h  vel_cntrl_ros.h
roscopter/include/ekf/: ekf.h  ekf_functions.h  ekf_ros.h  ekf_rosbag.h  meas.h  state.h  target_ekf_ros.h
roscopter/include/tests/: ekf_test.h  feed_forward_test.h  rtk_compassing_test.h
roscopter/include/tests/ekf/: ekf_dynamics.h  ekf_initialize.h  ekf_load.h  ekf_propagate.h  ekf_ref_lla.h  ekf_sensors.h  ekf_update.h
roscopter/launch/: bag.launch  base_landing.launch  boat_m2u.launch  boat_ublox.launch  copter_bag.launch  copter_mocap.launch  copter_sil.launch  copter_ublox.launch  landing_m2u.launch  landing_mocap.launch  landing_ublox.launch  mocap2ublox.launch  tune_mocap.launch
roscopter/launch/include/: m2u.launch  roscop.launch  rosflight.launch
roscopter/launch/mocap/: base_landing.launch  boat.launch  boat_mocap.launch  copter_mocap.launch  ff_cntrl_mocap.launch  is.launch  landing_m2u.launch  landing_mocap.launch  m2u.launch  m2u_landing.launch  mocap2ublox.launch  new_landing_m2u.launch  tune_mocap.launch
roscopter/launch/other/: copter_bag.launch  copter_sil.launch  copter_tune.launch
roscopter/launch/outdoor/: boat_estimator.launch  boat_outdoor.launch  boat_ublox.launch  copter_ublox.launch  roscop.launch
roscopter/params/: F450.yaml  base_ekf.yaml  ekf.yaml  groot.yaml  mocap2ublox.yaml  ragnarok.yaml  rfh_multirotor.yaml  waypoint.yaml  waypoints.yaml
roscopter/scripts/: hlc_continuous_ned.py  mocap2ublox.py  mocap2ublox_ros.py  mocap_odom.py  pose2ublox.py  virtual_velocity.py
roscopter/scripts/performance_tracker/: performance_ros.py
roscopter/src/controller/: controller.cpp  controller_node.cpp  controller_ros.cpp  simple_pid.cpp
roscopter/src/controller/feed_forward_cntrl/: ff_cntrl.cpp  ff_cntrl_node.cpp  ff_cntrl_ros.cpp  pd_cond_i.cpp  pd_i_lpf.cpp
roscopter/src/controller/ros/: controller_ros.cpp
roscopter/src/controller/vel_cntrl/: vel_cntrl.cpp  vel_cntrl_node.cpp  vel_cntrl_ros.cpp
roscopter/src/ekf/: dynamics.cpp  ekf.cpp  ekf_functions.cpp  ekf_ros.cpp  meas.cpp  sensors.cpp  target_ekf_node.cpp
roscopter/src/ekf/ros/: ekf_cb_ros.cpp  ekf_ros.cpp  ekf_rosbag.cpp  target_ekf_cb_ros.cpp  target_ekf_ros.cpp
roscopter/src/tests/: rtk_compassing_test.cpp
roscopter/src/tests/rtk_compassing/: covariance_test.cpp  state_test.cpp
roscopter/src/waypoint_manager/: platform_manager.py  waypoint_manager.py
roscopter/tests/ekf/: ekf_dynamics.cpp  ekf_initialize.cpp  ekf_load.cpp  ekf_propagate.cpp  ekf_ref_lla.cpp  ekf_sensors.cpp  ekf_test.cpp  ekf_update.cpp
roscopter/tests/feed_forward/: feed_forward_test.cpp
roscopter/tests/no_ros_test_setup_build/: CMakeLists.txt  READMe.md  compassing_setup.cpp
roscopter/tests/ros_test_setup/: compassing_setup.cpp
roscopter/tests/rtk_compassing/: compassing_utilities.cpp  covariance_test.cpp  state_test.cpp
roscopter_msgs/: CMakeLists.txt
roscopter_msgs/msg/: Control_Performance.msg
roscopter_sim/launch/: ff_landing.launch  ff_mocap_landing.launch  holodeck2ublox.launch  landing.launch  mocap.launch  mocap_landing.launch  multirotor.launch  tune_sim.launch  vel_cntrl.launch
roscopter_sim/launch/holodeck/: holodeck2ublox.launch
roscopter_sim/launch/mocap/: ff_mocap_landing.launch  mocap.launch  mocap_landing.launch
roscopter_sim/launch/spawn/: spawn_mav.launch
roscopter_sim/params/: ekf.yaml  platform.yaml  ragnarok.yaml
roscopter_sim/scripts/: mocap_sim_ros.py  sim_ros.py
roscopter_sim/xacro/: platform.urdf.xacro
